--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -16,6 +16,8 @@ jobs:
         run: npm ci
       - name: Build
         run: npm run build
+      - name: Test
+        run: npm test
       - uses: cyrilwanner/bundlewatch-comment-action@v1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
