--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "build:types": "tsc --emitDeclarationOnly",
     "lint": "tsc --noEmit && eslint . --ext .ts --ext .js",
     "lint:fix": "npm run lint -- --fix",
-    "test": "jest",
-    "test:watch": "npm test -- --watch"
+    "test": "npm run test:unit && npm run test:e2e",
+    "test:unit": "jest",
+    "test:unit:watch": "npm test -- --watch",
+    "test:e2e": "ts-node-script __tests__/e2e/run",
+    "pretest:e2e": "ts-node-script __tests__/e2e/build"
   },
   "dependencies": {
     "@wasm-codecs/gifsicle": "^1.0.0",
@@ -38,20 +41,27 @@
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-typescript": "^7.9.0",
+    "@types/express": "^4.17.7",
     "@types/jest": "^26.0.0",
     "@types/loader-utils": "^2.0.0",
+    "@types/node": "^14.0.27",
+    "@types/rimraf": "^3.0.0",
     "@types/sharp": "^0.25.0",
     "@types/svgo": "^1.3.3",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
+    "babel-loader": "^8.1.0",
     "eslint": "^7.0.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.3",
+    "express": "^4.17.1",
+    "html-webpack-plugin": "^4.3.0",
     "jest": "^26.0.1",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
+    "ts-node": "^8.10.2",
     "typescript": "^3.9.3",
     "webpack": "^4.43.0"
   },
