--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test:unit": "jest",
     "test:unit:watch": "npm test -- --watch",
     "test:e2e": "ts-node-script __tests__/e2e/run",
-    "test:e2e:watch": "WATCH=true ts-node-script __tests__/e2e/run",
+    "test:e2e:watch": "WATCH=true npm run test:e2e",
     "pretest:e2e": "ts-node-script __tests__/e2e/build",
     "test:e2e:cypress": "cd __tests__/e2e && cypress run",
     "test:e2e:cypress:watch": "cd __tests__/e2e && cypress open"
