--- a/package.json
+++ b/package.json
@@ -43,11 +43,15 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.9.0",
+    "@svgr/core": "^5.4.0",
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.0",
     "@types/loader-utils": "^2.0.0",
     "@types/node": "^14.0.27",
+    "@types/react": "^16.9.46",
+    "@types/react-dom": "^16.9.8",
     "@types/rimraf": "^3.0.0",
     "@types/sharp": "^0.25.0",
     "@types/svgo": "^1.3.3",
@@ -64,6 +68,8 @@
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.0.1",
     "prettier": "^2.0.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "rimraf": "^3.0.2",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.3",
