--- a/package.json
+++ b/package.json
@@ -27,17 +27,27 @@
     "@wasm-codecs/oxipng": "^1.0.1",
     "file-loader": "^6.0.0",
     "get-rgba-palette": "^2.0.1",
+    "imagemin": "^7.0.1",
     "loader-utils": "^2.0.0",
     "schema-utils": "^2.6.6",
     "sharp": "^0.26.0",
     "svgo": "^1.3.2",
     "url-loader": "^4.1.0"
   },
+  "peerDependencies": {
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-pngquant": "^9.0.1"
+  },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-typescript": "^7.9.0",
+    "@types/imagemin": "^7.0.0",
+    "@types/imagemin-mozjpeg": "^8.0.0",
+    "@types/imagemin-optipng": "^5.2.0",
+    "@types/imagemin-pngquant": "^8.0.0",
     "@types/jest": "^26.0.0",
     "@types/loader-utils": "^2.0.0",
     "@types/sharp": "^0.25.0",
